--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@
                 </div>
             </div> 
         </div>
+        
+        <div class="parent-main3">
+            <div class="two-images">
+                <img src="Image/atty_1.jpg" alt="">
+                <img src="Image/atty_2.jpg" alt="">
+            </div>
+
+            <div class="legal-solution-heading">
+                <h1>We Provide Highly <br><span>Reliable & Effective</span> <br>Legal Solutions</h1>
+                <p class="legal-solution-title">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Repudiandae, explicabo <br>iste a labore id est quas, doloremquebr
+                     veritatis! Provident odit pariatur dolorem <br>quisquam, voluptatibus voluptates optiobr
+                      accusamus, vel quasi quidem!</p>
+                      <button class="appoinmnet">Book an appoinment</button>
+            </div>
+        </div>
     </main>
 
 </body>
