Customer Review Section

--- a/index.html
+++ b/index.html
@@ -57,37 +57,49 @@
                     <div class="Bankruptcy">
                         <img class="default-image" src="Image/bankruptcy.png" alt="">
                         <h3 class="Bankruptcy-heading">Bankruptcy Law</h3>
-                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero, <br>laboriosam!</p>
+                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero,
+                            <br>laboriosam!
+                        </p>
                     </div>
                     <div class="Bankruptcy">
                         <img class="default-image" src="Image/business.png" alt="">
                         <h3 class="Bankruptcy-heading">Business Law</h3>
-                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero, <br>laboriosam!</p>
+                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero,
+                            <br>laboriosam!
+                        </p>
                     </div>
                     <div class="Bankruptcy">
                         <img class="default-image" src="Image/civil.png" alt="">
                         <h3 class="Bankruptcy-heading">Civil Rights Law</h3>
-                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero, <br>laboriosam!</p>
+                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero,
+                            <br>laboriosam!
+                        </p>
                     </div>
                     <div class="Bankruptcy">
                         <img class="default-image" src="Image/criminal.jpeg" alt="">
                         <h3 class="Bankruptcy-heading">Criminal Law</h3>
-                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero, <br>laboriosam!</p>
+                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero,
+                            <br>laboriosam!
+                        </p>
                     </div>
                     <div class="Bankruptcy">
                         <img class="default-image" src="Image/immigration.png" alt="">
                         <h3 class="Bankruptcy-heading">Immigration Law</h3>
-                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero, <br>laboriosam!</p>
+                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero,
+                            <br>laboriosam!
+                        </p>
                     </div>
                     <div class="Bankruptcy">
                         <img class="default-image" src="Image/house.png" alt="">
                         <h3 class="Bankruptcy-heading">Family Law</h3>
-                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero, <br>laboriosam!</p>
+                        <p class="Bankruptcy-title">Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Vero,
+                            <br>laboriosam!
+                        </p>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
-        
+
         <div class="parent-main3">
             <div class="two-images">
                 <img src="Image/atty_1.jpg" alt="">
@@ -96,12 +108,66 @@
 
             <div class="legal-solution-heading">
                 <h1>We Provide Highly <br><span>Reliable & Effective</span> <br>Legal Solutions</h1>
-                <p class="legal-solution-title">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Repudiandae, explicabo <br>iste a labore id est quas, doloremquebr
-                     veritatis! Provident odit pariatur dolorem <br>quisquam, voluptatibus voluptates optiobr
-                      accusamus, vel quasi quidem!</p>
-                      <button class="appoinmnet">Book an appoinment</button>
+                <p class="legal-solution-title">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit.
+                    Repudiandae, explicabo <br>iste a labore id est quas, doloremquebr
+                    veritatis! Provident odit pariatur dolorem <br>quisquam, voluptatibus voluptates optiobr
+                    accusamus, vel quasi quidem!</p>
+                <button class="appoinmnet">Book an appoinment</button>
             </div>
         </div>
+
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Customer Reviews</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <div class="customer-reviews">
+    <h3>Happy Customer</h3>
+
+    <div class="reviews-wrapper">
+      <div class="reviews">
+        <div class="profile">
+          <img src="Image/person_2.jpg" alt="Lina Gold">
+          <div class="review">
+            <span class="name">Lina Gold</span>
+            <span class="title">Owner, Ford</span>
+          </div>
+        </div>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum."</p>
+      </div>
+
+      <div class="reviews">
+        <div class="profile">
+          <img src="Image/person_1.jpg" alt="Mike Fisher">
+          <div class="review">
+            <span class="name">Mike Fisher</span>
+            <span class="title">Owner, Ford</span>
+          </div>
+        </div>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum."</p>
+      </div>
+
+      <div class="reviews">
+        <div class="profile">
+          <img src="Image/person_3.jpg" alt="Sheen Yu">
+          <div class="review">
+            <span class="name">Sheen Yu</span>
+            <span class="title">Owner, Ford</span>
+          </div>
+        </div>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum."</p>
+      </div>
+    </div>
+  </div>
+
+</body>
+</html>
+
+
     </main>
 
 </body>
