Some unusual e errors were fiexd

--- a/index.html
+++ b/index.html
@@ -116,57 +116,50 @@
             </div>
         </div>
 
-        <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Customer Reviews</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+        <div class="customer-reviews">
+            <h3>Happy Customer</h3>
 
-  <div class="customer-reviews">
-    <h3>Happy Customer</h3>
+            <div class="reviews-wrapper">
+                <div class="reviews">
+                    <div class="profile">
+                        <img src="Image/person_2.jpg" alt="Lina Gold">
+                        <div class="review">
+                            <span class="name">Lina Gold</span>
+                            <span class="title">Owner, Ford</span>
+                        </div>
+                    </div>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam.
+                        Ipsam, nam, voluptatum."</p>
+                </div>
 
-    <div class="reviews-wrapper">
-      <div class="reviews">
-        <div class="profile">
-          <img src="Image/person_2.jpg" alt="Lina Gold">
-          <div class="review">
-            <span class="name">Lina Gold</span>
-            <span class="title">Owner, Ford</span>
-          </div>
+                <div class="reviews">
+                    <div class="profile">
+                        <img src="Image/person_1.jpg" alt="Mike Fisher">
+                        <div class="review">
+                            <span class="name">Mike Fisher</span>
+                            <span class="title">Owner, Ford</span>
+                        </div>
+                    </div>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam.
+                        Ipsam, nam, voluptatum."</p>
+                </div>
+
+                <div class="reviews">
+                    <div class="profile">
+                        <img src="Image/person_3.jpg" alt="Sheen Yu">
+                        <div class="review">
+                            <span class="name">Sheen Yu</span>
+                            <span class="title">Owner, Ford</span>
+                        </div>
+                    </div>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam.
+                        Ipsam, nam, voluptatum."</p>
+                </div>
+            </div>
         </div>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum."</p>
-      </div>
 
-      <div class="reviews">
-        <div class="profile">
-          <img src="Image/person_1.jpg" alt="Mike Fisher">
-          <div class="review">
-            <span class="name">Mike Fisher</span>
-            <span class="title">Owner, Ford</span>
-          </div>
-        </div>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum."</p>
-      </div>
 
-      <div class="reviews">
-        <div class="profile">
-          <img src="Image/person_3.jpg" alt="Sheen Yu">
-          <div class="review">
-            <span class="name">Sheen Yu</span>
-            <span class="title">Owner, Ford</span>
-          </div>
-        </div>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, deserunt eveniet veniam. Ipsam, nam, voluptatum."</p>
-      </div>
-    </div>
-  </div>
-
-</body>
-</html>
-
+        
 
     </main>
 
