--- a/index.html
+++ b/index.html
@@ -158,10 +158,82 @@
             </div>
         </div>
 
+        <div class="parent-main4">
 
-        
+            <img src="Image/atty_2.jpg" alt="">
+
+            <div class="legal-solutions">
+                <h1 class="solution-title">We Have <span>Legal <br>
+                        Solutions</span></h1>
+                <p class="solution-description">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Quisquam
+                    reprehenderit <br>perspiciatis iste culpa consequuntur <br>consequatur eum, voluptatum, quod
+                    deserunt <br> maiores</p>
+                <p class="solution-description">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Quisquam
+                    reprehenderit <br>perspiciatis iste culpa consequuntur <br>consequatur eum, voluptatum, quod
+                    deserunt <br> maiores</p>
+            </div>
+            <div class="solution-input">
+                <input type="text" placeholder="How to Download and register?"><br>
+                <input type="text" placeholder="How to create your paypal account?"><br>
+                <input type="text" placeholder="How to link your paypal and bank account?"><br>
+            </div>
+        </div>
+
 
     </main>
+    <footer>
+        <div class="about">
+            <h3>About Us</h3>
+            <p>Far far away, behind the word <br> mountains, far from the countries
+                <br>Vokalia and
+                Consonantia, there live <br>the blind texts.
+            </p>
+        </div>
+        <div class="quick ">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="resource quick">
+            <h3 class="resource-title">Resource</h3>
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+
+        <div class="support quick">
+            <h3 class="support-title">Support</h3>
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+
+        <div class="company quick">
+            <h3 class="company-title">Company</h3>
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+
+
+    </footer>
 
 </body>
 
